--- a/HotelGarage/Views/Cars/Create.cshtml
+++ b/HotelGarage/Views/Cars/Create.cshtml
@@ -6,6 +6,7 @@
 }
 
 <h2>Create Car</h2>
+<h4>hodnota -1 znamena, ze ji zatim nezname</h4>
 @using (Html.BeginForm("Create", "Cars"))
 {
     <div class="form-group">
@@ -25,12 +26,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.GuestRoomNumber)
-        @Html.TextBoxFor(c => c.GuestRoomNumber, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.GuestRoomNumber, new { @class = "form-control"})
         @Html.ValidationMessageFor(c => c.GuestRoomNumber)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.PricePerNight)
-        @Html.TextBoxFor(c => c.PricePerNight, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.PricePerNight, new { @class = "form-control"})
         @Html.ValidationMessageFor(c => c.PricePerNight)
     </div>
     <div class="form-group">
