--- a/HotelGarage/Views/Reservations/Create.cshtml
+++ b/HotelGarage/Views/Reservations/Create.cshtml
@@ -8,9 +8,9 @@
 @using (Html.BeginForm("Create", "Reservations"))
 {
     <div class="form-group">
-        @Html.LabelFor(r => r.CarId)
-        @Html.TextBoxFor(r => r.CarId, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(r => r.CarId)
+        @Html.LabelFor(r => r.LicensePlate)
+        @Html.TextBoxFor(r => r.LicensePlate, new { @class = "form-control", autofocus = "autofocus" })
+        @Html.ValidationMessageFor(r => r.LicensePlate)
     </div>
     <div class="form-group">
         @Html.LabelFor(r => r.Arrival)
