--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Create Car", "Create", "Cars")</li>
+                    <li>@Html.ActionLink("Create Reservation", "Create", "Reservations")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
