--- a/HotelGarage/Content/Site.css
+++ b/HotelGarage/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 90px;
     padding-bottom: 20px;
 }
 
@@ -22,3 +22,43 @@ select,
 textarea {
     max-width: 280px;
 }
+
+span.field-validation-error {
+    color: red;
+    font-weight: bold;
+}
+
+/* bootstrap overrides */
+.navbar-inverse {
+    background-color: #204d74;
+    border-color: #204d74;
+}
+
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #DCDDE8;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #DCDDE8;
+}
+
+.navbar-brand {
+    font-weight: 700;
+    font-size: 21px;
+}
+
+
+body {
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 17px;
+}
+label {
+    
+    font-weight: normal;
+}
+
+span.field-validation-error {
+    font-size: 14px;
+}
+
