nove model tridy ParkingPlace a StateOfPlace a naplneni databaze o StateOfPlace moznosti

--- a/HotelGarage/Views/Home/Index.cshtml
+++ b/HotelGarage/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <li>Příjezd rezervace - @reservation.Arrival</li>
     <br />
 }
-@Html.ActionLink("Make new reservation", 
+@Html.ActionLink("Nová Rezervace", 
     "Create", 
     "Reservations", 
     new { Reservations = Model }, 
