--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("President Garage", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("President Garage", "Parking", "Parking", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
