--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -10,25 +10,25 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("President Garage", "Parking", "Parking", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Nová rezervace", "Create", "Reservations")</li>
-                    <li>@Html.ActionLink("Nové auto", "Create", "Cars")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-inverse fixed-top">
+        @Html.ActionLink("President Garage", "Parking", "Parking" , null, new { @class = "navbar-brand" })
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link" })
+                </li>
+                <li class="nav-item">
+                    @Html.ActionLink("Nové auto", "Create", "Cars", null, new { @class = "nav-link" })
+                </li>
+                <li>
+                    @Html.Partial("_LoginPartial")
+                </li>
+            </ul>
         </div>
-    </div>
+    </nav>    
     <div class="container body-content">
         @RenderBody()
         <hr />
