--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -42,7 +42,7 @@
             "CheckIn",
             "Reservations",
             new { parkplace = pplaceId },
-            new { @class = "btn btn-primary btn-sm", type = "submit" })
+            new { type = "submit" , @class = "btn btn-primary btn-sm"})
 
             @Html.ActionLink("Check In",
             "CheckIn",
