--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -18,18 +18,20 @@
         </button>
         
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="nav navbar-nav">
                 <li class="nav-item">
                     @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Nové auto", "Create", "Cars", null, new { @class = "nav-link" })
                 </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
                 <li>
                     @Html.Partial("_LoginPartial")
                 </li>
             </ul>
-        </div>
+</div>
     </nav>
     <div class="container body-content">
         @RenderBody()
