--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -18,7 +18,7 @@
                     @Model[12].Name<br>
                     @Model[12].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[12].StateOfPlace</a>
+                <a href="#">@Model[12].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -28,7 +28,7 @@
                     @Model[13].Name<br>
                     @Model[13].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[13].StateOfPlace</a>
+                <a href="#">@Model[13].StateOfPlace</a>
             </div>
         </div><div class="card">
             <div class="card-body">
@@ -37,7 +37,7 @@
                     @Model[14].Name<br>
                     @Model[14].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[14].StateOfPlace</a>
+                <a href="#">@Model[14].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -47,7 +47,7 @@
                     @Model[15].Name<br>
                     @Model[15].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[15].StateOfPlace</a>
+                <a href="#">@Model[15].StateOfPlace</a>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
                     @Model[19].Name<br>
                     @Model[19].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[19].StateOfPlace</a>
+                <a href="#">@Model[19].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -72,7 +72,7 @@
                     @Model[21].Name<br>
                     @Model[21].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[21].StateOfPlace</a>
+                <a href="#">@Model[21].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -82,7 +82,7 @@
                     @Model[22].Name<br>
                     @Model[22].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[22].StateOfPlace</a>
+                <a href="#">@Model[22].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -92,7 +92,7 @@
                     @Model[24].Name<br>
                     @Model[24].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[24].StateOfPlace</a>
+                <a href="#">@Model[24].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -102,7 +102,7 @@
                     @Model[16].Name<br>
                     @Model[16].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[16].StateOfPlace</a>
+                <a href="#">@Model[16].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -119,7 +119,7 @@
                     @Model[23].Name<br>
                     @Model[23].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[23].StateOfPlace</a>
+                <a href="#">@Model[23].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -129,7 +129,7 @@
                     @Model[25].Name<br>
                     @Model[25].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[25].StateOfPlace</a>
+                <a href="#">@Model[25].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -139,7 +139,7 @@
                     @Model[17].Name<br>
                     @Model[17].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[17].StateOfPlace</a>
+                <a href="#">@Model[17].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -158,7 +158,7 @@
                     @Model[26].Name<br>
                     @Model[26].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[26].StateOfPlace</a>
+                <a href="#">@Model[26].StateOfPlace</a>
             </div>
         </div>
         <div class="card">
@@ -168,7 +168,7 @@
                     @Model[18].Name<br>
                     @Model[18].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[18].StateOfPlace</a>
+                <a href="#">@Model[18].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -181,7 +181,7 @@
                     @Model[20].Name<br>
                     @Model[20].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[20].StateOfPlace</a>
+                <a href="#">@Model[20].StateOfPlace</a>
             </div>
         </div>
         <div class="parkovaciMistoPrazdne">
@@ -195,7 +195,7 @@
                     @Model[27].Name<br>
                     @Model[27].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[27].StateOfPlace</a>
+                <a href="#">@Model[27].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -215,7 +215,7 @@
                     @Model[11].Name<br>
                     @Model[11].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[11].StateOfPlace</a>
+                <a href="#">@Model[11].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -228,7 +228,7 @@
                     @Model[10].Name<br>
                     @Model[10].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[10].StateOfPlace</a>
+                <a href="#">@Model[10].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -241,7 +241,7 @@
                     @Model[9].Name<br>
                     @Model[9].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[9].StateOfPlace</a>
+                <a href="#">@Model[9].StateOfPlace</a>
             </div>
         </div>
         <div class="parkovaciMistoPrazdne">
@@ -253,7 +253,7 @@
                     @Model[0].Name<br>
                     @Model[0].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[0].StateOfPlace</a>
+                <a href="#">@Model[0].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -266,7 +266,7 @@
                     @Model[8].Name<br>
                     @Model[8].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[8].StateOfPlace</a>
+                <a href="#">@Model[8].StateOfPlace</a>
             </div>
         </div>
         <div class="parkovaciMistoPrazdne">
@@ -278,7 +278,7 @@
                     @Model[1].Name<br>
                     @Model[1].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[1].StateOfPlace</a>
+                <a href="#">@Model[1].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -291,7 +291,7 @@
                     @Model[7].Name<br>
                     @Model[7].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[7].StateOfPlace</a>
+                <a href="#">@Model[7].StateOfPlace</a>
             </div>
         </div>
         <div class="parkovaciMistoPrazdne">
@@ -303,7 +303,7 @@
                     @Model[2].Name<br>
                     @Model[2].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[2].StateOfPlace</a>
+                <a href="#">@Model[2].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -316,7 +316,7 @@
                     @Model[6].Name<br>
                     @Model[6].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[6].StateOfPlace</a>
+                <a href="#">@Model[6].StateOfPlace</a>
             </div>
         </div>
         <div class="parkovaciMistoPrazdne">
@@ -328,7 +328,7 @@
                     @Model[3].Name<br>
                     @Model[3].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[3].StateOfPlace</a>
+                <a href="#">@Model[3].StateOfPlace</a>
             </div>
         </div>
     </div>
@@ -341,7 +341,7 @@
                     @Model[5].Name<br>
                     @Model[5].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[5].StateOfPlace</a>
+                <a href="#">@Model[5].StateOfPlace</a>
             </div>
         </div>
         <div class="parkovaciMistoPrazdne">
@@ -353,16 +353,17 @@
                     @Model[4].Name<br>
                     @Model[4].Departure
                 </p>
-                <a href="#" class="btn btn-primary">@Model[4].StateOfPlace</a>
+                <a href="#">@Model[4].StateOfPlace</a>
             </div>
         </div>
     </div>
 </div>
+
 @Html.ActionLink("Check In",
 "CheckIn",
 "Reservations",
 new { parkplace = "DOPLN" },
-new { @class = "btn btn-primary btn-sm", type = "submit", style = "margin-left:10px" })
+new { @class = "btn btn-primary" })
 <br />
 
 
@@ -370,4 +371,5 @@ new { @class = "btn btn-primary btn-sm", type = "submit", style = "margin-left:1
     "Create",
     "Reservations",
     new { Reservations = Model },
-    new { @class = "btn btn-primary", type = "submit" })
+    new { @class = "btn btn-primary"})
+
