--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    
 </head>
 <body>
 
@@ -16,11 +16,11 @@
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link " })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Nové auto", "Create", "Cars", null, new { @class = "nav-link" })
@@ -31,7 +31,7 @@
                     @Html.Partial("_LoginPartial")
                 </li>
             </ul>
-</div>
+        </div>
     </nav>
     <div class="container body-content">
         @RenderBody()
@@ -40,11 +40,10 @@
             <p>&copy; @DateTime.Now.Year - Hotel President Garage Management</p>
         </footer>
     </div>
-    
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
-    
+    @Scripts.Render("~/Scripts/ParkingOverviewScript.js")
 </body>
 </html>
