--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -19,6 +19,10 @@
                     @Model.ParkingPlaceDtos[12].Departure
                 </p>
                 <a href="javascript:void()" class="js-sOPChange">@Model.ParkingPlaceDtos[12].StateOfPlace</a>
+                <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.ParkingPlaceDtos[12].Id>
+                    <a class="nav-link" href="#">Check In</a>
+                    <a class="nav-link" href="#">Reserve</a>
+                </nav>
             </div>
         </div>
         <div class="card">
@@ -29,6 +33,10 @@
                     @Model.ParkingPlaceDtos[13].Departure
                 </p>
                 <a href="javascript:void()" class="js-sOPChange">@Model.ParkingPlaceDtos[13].StateOfPlace</a>
+                <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.ParkingPlaceDtos[13].Id>
+                    <a class="nav-link" href="#">Check In</a>
+                    <a class="nav-link disabled" href="#">Upravit</a>
+                </nav>
             </div>
         </div>
         <div class="card">
@@ -39,6 +47,10 @@
                     @Model.ParkingPlaceDtos[14].Departure
                 </p>
                 <a href="javascript:void()" class="js-sOPChange">@Model.ParkingPlaceDtos[14].StateOfPlace</a>
+                <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.ParkingPlaceDtos[14].Id>
+                    <a class="nav-link" href="#">Upravit</a>
+                    <a class="nav-link disabled" href="#">Check Out</a>
+                </nav>
             </div>
         </div>
         <div class="card">
@@ -49,6 +61,10 @@
                     @Model.ParkingPlaceDtos[15].Departure
                 </p>
                 <a href="javascript:void()" class="js-sOPChange">@Model.ParkingPlaceDtos[15].StateOfPlace</a>
+                <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.ParkingPlaceDtos[15].Id>
+                    <a class="nav-link" href="#">Upravit</a>
+                    <a class="nav-link disabled" href="#">Check Out</a>
+                </nav>
             </div>
         </div>
 
